# python-template-profissional

./: .coveragerc  .editorconfig  .env.example  .envrc.template  .gitattributes  .gitignore  .guardian-whitelist.yaml  .pre-commit-config.yaml  .python-version  .safety-policy.yml  .safety-policy.yml.bak  404.html  CHANGELOG.md  CI_PERFORMANCE_AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  README.md.backup  SECURITY.md  SPRINT4_MYPY_SUMARIO.txt  audit_metrics.json  babel.cfg  copier.yml  docker-compose.yml  finalize_visibility_task.sh  index.html  mkdocs.yml  mypy_nivel1_proposta.toml  mypy_strict.ini  objects.inv  pyproject.toml  pyproject.toml.jinja  sitemap.xml  test_coverage_output.txt  tox.ini  validate_output.txt
.github/: CODEOWNERS  CODEOWNERS.jinja  PR_CORTEX_ORCHESTRATOR.md  PR_DESCRIPTION.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: audit_schedule.yml  cd-api.yml  cd-pypi.yml  ci.yml  deploy-docs.yml  docs.yml  mutation-audit.yml  propagate.yml  release.yml  validate-docs.yml.example
AUDIT_DASHBOARD_INTEGRATION/: index.html
CODE_AUDIT/: index.html
FASE01_DISCOVERY_CEGUEIRA_FERRAMENTA/: index.html
P12_CODE_AUDIT_REFACTORING_ANALYSIS/: index.html
P13_AUDITORIA_WARNINGS_NOQA/: index.html
P13_FASE02_CORRECOES_IMPLEMENTADAS/: index.html
P26_FASE02_3_RELATORIO_FINAL/: index.html
P26_FASE02_4_5_RELATORIO_FINAL/: index.html
P26_FASE02_6_RELATORIO_FINAL/: index.html
P26_FASE02_RELATORIO_FINAL/: index.html
P26_FASE02_RELATORIO_PARCIAL/: index.html
P26_REFATORACAO_SCRIPTS_FASE01/: index.html
PR_CORTEX_MODULARIZATION/: index.html
README_test_mock_system/: index.html
SMART_GIT_SYNC_GUIDE/: index.html
SPRINT1_AUDITORIA_FASE01/: index.html
SPRINT1_AUDITORIA_SUMARIO/: index.html
SPRINT1_FASE02_RELATORIO/: index.html
SPRINT1_MIGRATION_GUIDE/: index.html
SPRINT1_README/: index.html
analysis/DX_GOVERNANCE_BOTTLENECK_ANALYSIS/: index.html
analysis/EXECUTIVE_SUMMARY_DX_OPTIMIZATION/: index.html
architecture/ADR_002_PRE_COMMIT_OPTIMIZATION/: index.html
architecture/ADR_003_SRC_GITKEEP_STABILITY/: index.html
architecture/ADR_005_CLI_HEXAGONAL_REFACTOR/: index.html
architecture/ARCHITECTURE_TRIAD/: index.html
architecture/AUDIT_DASHBOARD_INTEGRATION/: index.html
architecture/AUDIT_ORCHESTRATOR_DESIGN/: index.html
architecture/CODE_AUDIT/: index.html
architecture/CORTEX_ARVORE_ARQUIVOS/: index.html
architecture/CORTEX_CHECKLIST_IMPLEMENTACAO/: index.html
architecture/CORTEX_FASE01_DESIGN/: index.html
architecture/CORTEX_FASE03_EXECUTIVE_SUMMARY/: index.html
architecture/CORTEX_FASE03_LINK_RESOLVER_DESIGN/: index.html
architecture/CORTEX_FASE03_LINK_SCANNER_DESIGN/: index.html
architecture/CORTEX_FASE03_PRODUCTION_SUMMARY/: index.html
architecture/CORTEX_FASE03_README/: index.html
architecture/CORTEX_FASE03_VALIDATOR_DESIGN/: index.html
architecture/CORTEX_FASE03_VALIDATOR_EXECUTIVE_SUMMARY/: index.html
architecture/CORTEX_FASE04_VECTOR_STORE_DESIGN/: index.html
architecture/CORTEX_INDICE/: index.html
architecture/CORTEX_MODULARIZATION_REFACTORING/: index.html
architecture/CORTEX_RESUMO_EXECUTIVO/: index.html
architecture/CORTEX_ROOT_LOCKDOWN/: index.html
architecture/DATA_MODELS/: index.html
architecture/DEPENDENCY_DIAGRAM_SNAPSHOT/: index.html
architecture/DEPENDENCY_IMMUNITY_PROTOCOL/: index.html
architecture/FORMATTER_PATTERN/: index.html
architecture/GIT_SYNC_HEARTBEAT_TELEMETRY/: index.html
architecture/HEXAGONAL_DIAGRAMS/: index.html
architecture/I18N_STRATEGY/: index.html
architecture/MOCK_CI_REFACTORING/: index.html
architecture/OBSERVABILITY/: index.html
architecture/PERFORMANCE_NOTES/: index.html
architecture/PLATFORM_ABSTRACTION/: index.html
architecture/PROJECT_SCAFFOLDING_ARCHITECTURE/: index.html
docs/: AUDIT_DASHBOARD_INTEGRATION.md  CODE_AUDIT.md  DEV_COMMANDS.md  FASE01_DISCOVERY_CEGUEIRA_FERRAMENTA.md  LINT_FIX_QUICK_GUIDE.md  LINT_FIX_SYSTEM.md  P26_FASE02_6_1_HOTFIX_SYSPATH.md  PR_CORTEX_MODULARIZATION.md  README.md  README_test_mock_system.md  SMART_GIT_SYNC_GUIDE.md  SPRINT1_AUDITORIA_SUMARIO.md  SPRINT1_MIGRATION_GUIDE.md  index.md
docs/architecture/: CODE_AUDIT.md  (+38 more)
html/: index.html
locales/: .gitkeep  messages.pot
reference/: MOCK_CI_SCHEMA.json
requirements/: dev.in  dev.txt
scripts/: README_test_mock_system.md  __init__.py  audit_config.yaml  audit_dashboard.py  audit_dependencies.py  benchmark_cortex_perf.py  ci_failure_recovery.py  ci_test_mock_integration.py  code_audit.py  dev_commands.py  direct-push-main.sh  doctor.py  example_guardian_scanner.py  install_dev.py  integrated_audit_example.py  lint_fix.py  maintain_versions.py  post-pr-cleanup.sh  pre_commit_audit.py  smart_git_sync.py  smart_git_sync_config.yaml  test_mock_config.yaml  test_mock_generator.py  validate_test_mocks.py
search/: search_index.json
src/: .gitkeep  __init__.py  main.py
tests/: __init__.py  conftest.py  test_audit_analyzer.py  test_audit_dashboard.py  test_audit_memory.py  test_audit_orchestrator.py  test_ci_check_docs.py  test_ci_integrity.py  test_config_orchestrator.py  test_copier_template.py  test_cortex_cli_commands.py  test_cortex_concurrency.py  test_cortex_integration.py  test_cortex_map_knowledge.py  test_cortex_metadata.py  test_cortex_models.py  test_cortex_scanner.py  test_dependency_alignment.py  test_dependency_guardian.py  test_dependency_guardian_deep.py  test_dependency_guardian_resilience.py  test_dependency_safety.py  test_doctor_hooks_criticality.py  test_filesystem_adapter.py  test_filesystem_contract.py  test_generation_orchestrator.py  test_governance_policies.py  test_guardian_scanner.py  test_hooks_orchestrator.py  test_install_dev_ci.py  test_install_dev_hooks.py  test_install_dev_safety.py  test_interaction_service.py  test_knowledge_models.py  test_knowledge_orchestrator.py  test_knowledge_poc.py  test_knowledge_scanner.py  test_knowledge_sync.py  test_knowledge_sync_resilience.py  test_knowledge_validator.py  (+27 more)
(+388 files in other folders)
