# Define o sistema de build do projeto.
# Usamos 'setuptools', o padrão moderno.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Metadados do Projeto (PEP 621)
# ESTE ARQUIVO É GERADO PELO TEMPLATE COPIER
# Para modificar: edite pyproject.toml.jinja
[project]
name = "python_template_profissional"
version = "0.1.0"
description = "Professional Python Template with CORTEX architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Template Development Team", email = "dev@example.com" }
]

# Dependências do projeto (API + CLI)
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "typer[all]",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "tomli>=2.0.1",
]

# Dependências de desenvolvimento
[project.optional-dependencies]
dev = [
    "pip-tools~=7.4",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0",
    "babel>=2.10",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

# Console scripts - comandos globais do sistema
[project.scripts]
python-template = "src.app.main:app"
dev-doctor = "scripts.cli.doctor:main"
dev-audit = "scripts.cli.audit:main"
git-sync = "scripts.cli.git_sync:main"
upgrade-python = "scripts.cli.upgrade_python:main"
mock-gen = "scripts.cli.mock_generate:main"
mock-check = "scripts.cli.mock_validate:main"
mock-ci = "scripts.cli.mock_ci:main"
cortex = "scripts.cortex.cli:main"
toml-fusion = "scripts.cli.fusion:main"

# Configuração do setuptools para incluir pacotes
[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

# --- Configuração das Ferramentas ---

# Configuração do Ruff (Linter e Formatador)
[tool.ruff]
line-length = 88
target-version = "py310"

# Configuração do Linter do Ruff
[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "D", "C901"]
ignore = ["D203", "D213"]

# Configuração do pydocstyle (D-Rules)
[tool.ruff.lint.pydocstyle]
convention = "google"

# Configuração do McCabe (Complexidade Ciclomática)
[tool.ruff.lint.mccabe]
max-complexity = 10

# Configuração do Formatador do Ruff
[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

# Configuração do Semantic Release
[tool.semantic_release]
version_variable = "pyproject.toml:project.version"
upload_to_pypi = false
changelog_file = "CHANGELOG.md"
build_command = "python3 -m build"
minor_on_default_scope = true
major_on_breaking_change = true

[tool.semantic_release.changelog]
categories = ["feat", "fix", "docs", "refactor", "perf"]

# Configuração do Mypy (Type Checking)
[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
follow_imports = "normal"
strict_equality = true

exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "scripts/audit_dashboard.py"
]

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true

# Configuração do Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-n", "auto",
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
    "e2e: mark a test as an end-to-end test.",
]

# Configuração do Import Linter (Arquitetura - Separação de Camadas)
[tool.importlinter]
root_packages = ["scripts", "src"]

[[tool.importlinter.contracts]]
name = "Core não deve importar CLI"
type = "forbidden"
source_modules = ["scripts.core"]
forbidden_modules = ["scripts.cli"]

[[tool.importlinter.contracts]]
name = "Cortex Core não deve importar Cortex CLI"
type = "forbidden"
source_modules = ["scripts.core.cortex"]
forbidden_modules = ["scripts.cortex"]

# Configuração do Deptry (Dependências Não Utilizadas)
[tool.deptry]
extend_exclude = [
    "scripts/",
    "tests/",
    ".venv/",
    "build/",
    "dist/",
]
# Grandfathering: ignorar deps atuais do projeto (template)
[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn", "typer", "pydantic", "pydantic-settings", "chromadb", "sentence-transformers", "tomli", "pip-tools", "ruff", "mypy", "pytest", "pytest-xdist", "pytest-cov", "babel", "mkdocs-material", "mkdocstrings", "python-frontmatter", "pyyaml", "jinja2", "fastapi"]

# Configuração do Interrogate (Cobertura de Docstrings)
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = true
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = true
fail-under = 0  # Grandfathering: começar em 0 e aumentar gradualmente
exclude = [
    "setup.py",
    "docs",
    "build",
    "scripts/audit_dashboard.py",  # Legado
]
verbose = 1
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
